fix: update rebac response
